# discipline

./: .flake8  .gitignore  .isoft.cfg  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  shell.nix  step1.py  step10.py  step11.py  step12.py  step13.py  step14.py  step15.py  step2.py  step3.py  step4.py  step5.py  step6.py  step7.py  step8.py  step9.py
.circleci/: config.yml
